# self-gtest-prj

./: CMakeLists.txt  code.cc  code.h  code.hh  readme.md  self_test.cc
test/: CMakeLists.txt  test.cc
